<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.CadastroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fundo_cinza_claro"
        tools:context=".ui.CadastroActivity">

    <!-- Titulo -->
    <RelativeLayout
        android:id="@+id/relativeLayoutCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="-90dp"
            android:layout_marginStart="-50dp"
            android:background="@drawable/circulo_shape"
            android:backgroundTint="#905AAF3F" />

        <View
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-100dp"
            android:layout_marginEnd="-40dp"
            android:background="@drawable/circulo_shape"
            android:backgroundTint="#90143C25" />

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Crie sua conta \n          aqui"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <!-- Campo para nome -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/relativeLayoutCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome"
            android:textColor="@color/edit_texto"
            android:textColorHint="@color/edit_texto_hint"
            android:inputType="textPersonName"
            android:background="@drawable/container_componentes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para sobrenome -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSobrenomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNomeCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSobrenomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sobrenome"
            android:textColor="@color/edit_texto"
            android:textColorHint="@color/edit_texto_hint"
            android:inputType="textPersonName"
            android:background="@drawable/container_componentes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para E-mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSobrenomeCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-mail"
            android:textColor="@color/edit_texto"
            android:textColorHint="@color/edit_texto_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/container_componentes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Senha"
            android:textColor="@color/edit_texto"
            android:textColorHint="@color/edit_texto_hint"
            android:inputType="textPassword"
            android:background="@drawable/container_componentes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para confirmar senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputConfirmacaoSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:endIconMode="password_toggle"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenhaCadastro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editConfirmacaoSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirma_o_de_senha"
            android:textColor="@color/edit_texto"
            android:textColorHint="@color/edit_texto_hint"
            android:inputType="textPassword"
            android:background="@drawable/container_componentes" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botão de criar conta -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/criarContaButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/container_componentes"
        android:text="Finalizar Cadastro"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@color/verde_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmacaoSenhaCadastro"/>

    <!-- Ja possui conta -->
        <TextView
            android:id="@+id/txtPossuiConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j_possui_uma_conta"
            android:textColor="@color/edit_texto_hint"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/criarContaButton" />

    <!-- Entrar -->
        <TextView
            android:id="@+id/txtVoltarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:textColor="@color/verde_claro"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toEndOf="@+id/txtPossuiConta"
            app:layout_constraintTop_toBottomOf="@+id/criarContaButton"
            app:layout_constraintVertical_bias=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>